--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,36 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+
 h1, h2, h3 {
     font-family:  'Open Sans', sans-serif;
 }
+
+//Background gradient
+.navbar, .home-callout {
+    //Gradient provided by @_ighosh at uiGradients.com
+    background: #a8c0ff;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #3f2b96, #a8c0ff);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #3f2b96, #a8c0ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.navbar {
+    border: none;
+}
+
+.home-callout {
+    margin-top: -20px;
+    padding-top: 50px;
+    padding-bottom: 100px;
+    color: white;
+}
+
+.navbar-default .navbar-brand, 
+.navbar-default .navbar-nav > li > a {
+    color: white;
+    &:hover {
+        color: white;
+        opacity: 0.75;
+    }
+}
+
